--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
 
     <head>
@@ -37,7 +36,7 @@
         <div id="side" class="d-flex flex-column flex-shrink-0 p-1 bg-light" style="width: 230px;">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
               <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-              <span class="fs-4">Sidebar</span>
+              <span class="fs-4">Menu</span>
             </a>
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
@@ -50,25 +49,19 @@
               <li>
                 <a href="#" class="nav-link link-dark">
                   <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
-                  Dashboard
+                  Exemples
                 </a>
               </li>
               <li>
                 <a href="#" class="nav-link link-dark">
                   <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"/></svg>
-                  Orders
+                  Activities
                 </a>
               </li>
               <li>
                 <a href="#" class="nav-link link-dark">
                   <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
-                  Products
-                </a>
-              </li>
-              <li>
-                <a href="#" class="nav-link link-dark">
-                  <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  Customers
+                  Video
                 </a>
               </li>
             </ul>
