--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
 
 
-            <div id="pag" class="container col-xxl-8 px-4 py-1">
-                <div class="row flex-lg-row-reverse align-items-center g-0 py-5">
+            <div id="pag" class="container col-xxl-18 px-4 py-1">
+                <div class="row flex-lg-row-reverse g-0 py-5">
                 <div class="col-10 col-sm-8 col-lg-7">
                     <img src="funcao2grauconcavidade.webp" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="500" height="500" loading="lazy">
                 </div>
