--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link link-dark">
+                    <a href="#video" class="nav-link link-dark">
                     <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
                     Vídeo
                     </a>
@@ -221,6 +221,12 @@
                                     </form>
                                 </div>
                             </div>
+                            <div id="video">
+                                <p class="lead">Veja abaixo uma vídeoaula da professora Anna Karla Trindade, Professora do Instituto Federal do Piauí, Formada e Doutorada em matemática.</p>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/FYue8Cue2uE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            
+                            </div>
+            
                         </div>
                     </body>
                     </html>
@@ -230,6 +236,8 @@
                     </div>
                 </div>
                 </div>
+
+
         </div>
          <div class="container">
             <footer class="py-3 my-4">
